Updated about me section.

--- a/index.html
+++ b/index.html
@@ -51,22 +51,18 @@
         <div class="section-b-inner" id="section-a">
           <h3>About Me</h3>
           <p>
-            My web development journey started as a hobby. I've always loved the
-            internet and just technology in general. I first took action when I
-            decided I wanted to learn how to build a mobile application just for
-            fun and out of pure curiosity. That's when I entered the rabbit hole
-            of the vast amounts of information about programming languages,
-            which one I should learn first, IDE's, frameworks, libraries,
-            computer science and so on. To say the least I was very overwhelmed
-            and just lost. I honestly just blindly chose a Javascript course and
-            quickly immersed myself into the language and of course web
-            development. I haven't looked back since and am very happy I
-            discovered this industry and community. It has taught me how to
-            learn and has disciplined me in many aspects of my life. I never
-            knew this was a career starting off, but now I am in love with the
-            idea of it being a career! I am eager to keep learning and to soon
-            pick back up with mobile development as well as also explore
-            different branches of this immense field!
+            My interest in web development began as a hobby. I've always been
+            fascinated by the internet and technology in general. I first took
+            action when I decided to learn how to build a mobile app for fun and
+            out of sheer curiosity. That's when I fell down the rabbit hole of
+            information about programming languages, IDEs, frameworks, computer
+            science, and so on. I honestly ended up choosing a Javascript course
+            spontaneously as a starting point and quickly immersed myself in the
+            language and web development. I haven't looked back since and am
+            extremely grateful to have discovered this industry and community.
+            It taught me how to learn and disciplined me in many areas of my
+            life. I am eager to continue learning and exploring different
+            branches of this vast field!
           </p>
         </div>
       </div>
